--- a/WorkShiftAnalyzer/Views/Shared/_Layout.cshtml
+++ b/WorkShiftAnalyzer/Views/Shared/_Layout.cshtml
@@ -23,10 +23,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">بارگذاری فایل اکسل</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">گزارش کلی </a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ReportAll">گزارش کلی </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">گزارش فردی </a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Report">گزارش فردی </a>
                         </li>
                     </ul>
                 </div>
